--- a/style.css
+++ b/style.css
@@ -15,12 +15,26 @@ main {
     padding: 20px;
 }
 
-.video {
-    margin: 20px 0;
+#chat-container {
+    max-width: 500px;
+    margin: 0 auto;
+    text-align: center;
 }
 
-iframe {
-    max-width: 100%;
+.message {
+    background-color: #f2f2f2;
+    padding: 10px;
+    margin: 5px;
+    border-radius: 5px;
+}
+
+#message-input {
+    width: 70%;
+    padding: 5px;
+}
+
+#send-button {
+    padding: 5px 10px;
 }
 
 footer {
