--- a/style.css
+++ b/style.css
@@ -22,10 +22,17 @@ main {
 }
 
 .message {
-    background-color: #f2f2f2;
     padding: 10px;
     margin: 5px;
     border-radius: 5px;
+}
+
+.user {
+    background-color: #f2f2f2;
+}
+
+.ai {
+    background-color: #e0e0e0;
 }
 
 #message-input {
